--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -27,6 +27,7 @@
     text-decoration: none;
     color: black;
     text-transform: uppercase;
+    font-size: 1.3rem;
 
     &:hover {
         font-weight: bold;
@@ -37,6 +38,7 @@
 .user {
     span {
         margin: 0 1rem;
+        font-size: 1rem;
     }
 }
 
